added confirmation page and cleaned up footers

--- a/src/main/Resources/Templates/index.html
+++ b/src/main/Resources/Templates/index.html
@@ -447,50 +447,50 @@
                     <!--</div>-->
                     <!-- column End -->
                     <div class="col-md-6 col-sm-12">
-                        <form action="https://formspree.io/crazycafe@gmail.com" method="post">
-                            <div class="common_input Volunteer_input">
-                                <h2>Become a Volunteer</h2>
-                                <div class="row">
-                                    <div class="col-sm-6">
-                                        <input type="text" name="check_first_name" placeholder=" Name">
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <input type="email" name="check_last_name" placeholder="Email">
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-sm-6">
-                                        <div class="select_option_one">
-                                            <select name="userSelect2" id="userSelect2" class="">
-                                                <option value="1">Gender</option>
-                                                <option value="2">Male</option>
-                                                <option value="3">Femail</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <div class="select_option_one">
-                                            <select name="userSelect" id="userSelect" class="">
-                                                <option value="1">Country</option>
-                                                <option value="2">Bangladesh</option>
-                                                <option value="3">Unitade Sate</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-sm-12">
-                                        <textarea name="c_textarea" id="c_textarea" cols="30" rows="10"
-                                                  placeholder="Message..."></textarea>
-                                        <div class="sub_submit">
-                                            <button type="submit" class="common_btn hvr-sweep-to-bottom">Apply Now<i
-                                                    class="fa fa-long-arrow-right"></i></button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                        <!--<form action="https://formspree.io/crazycafe@gmail.com" method="post">-->
+                            <!--<div class="common_input Volunteer_input">-->
+                                <!--<h2>Become a Volunteer</h2>-->
+                                <!--<div class="row">-->
+                                    <!--<div class="col-sm-6">-->
+                                        <!--<input type="text" name="check_first_name" placeholder=" Name">-->
+                                    <!--</div>-->
+                                    <!--<div class="col-sm-6">-->
+                                        <!--<input type="email" name="check_last_name" placeholder="Email">-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                                <!--<div class="row">-->
+                                    <!--<div class="col-sm-6">-->
+                                        <!--<div class="select_option_one">-->
+                                            <!--<select name="userSelect2" id="userSelect2" class="">-->
+                                                <!--<option value="1">Gender</option>-->
+                                                <!--<option value="2">Male</option>-->
+                                                <!--<option value="3">Femail</option>-->
+                                            <!--</select>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                    <!--<div class="col-sm-6">-->
+                                        <!--<div class="select_option_one">-->
+                                            <!--<select name="userSelect" id="userSelect" class="">-->
+                                                <!--<option value="1">Country</option>-->
+                                                <!--<option value="2">Bangladesh</option>-->
+                                                <!--<option value="3">Unitade Sate</option>-->
+                                            <!--</select>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                                <!--<div class="row">-->
+                                    <!--<div class="col-sm-12">-->
+                                        <!--<textarea name="c_textarea" id="c_textarea" cols="30" rows="10"-->
+                                                  <!--placeholder="Message..."></textarea>-->
+                                        <!--<div class="sub_submit">-->
+                                            <!--<button type="submit" class="common_btn hvr-sweep-to-bottom">Apply Now<i-->
+                                                    <!--class="fa fa-long-arrow-right"></i></button>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                            <!--</div>-->
 
-                        </form>
+                        <!--</form>-->
                     </div>
                     <!-- column End -->
                 </div>
