--- a/src/main/Resources/Templates/disasterdetails.html
+++ b/src/main/Resources/Templates/disasterdetails.html
@@ -75,7 +75,6 @@
                     <a href="https://twitter.com/reliefweb"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                     <a href="https://www.linkedin.com/company/reliefweb"><i class="fa fa-skype" aria-hidden="true"></i></a>
                     <a href="https://www.youtube.com/channel/UC4RQutFVU_1OSNtOzGyBfGw"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                    <a href="donation.html" class="common_btn hvr-sweep-to-bottom">DONATE NOW</a>
                 </div>
                 <!-- column End -->
             </div>
@@ -147,10 +146,12 @@
                 <div class="col-xs-12">
                     <div class="romana_allPage_text wow zoomIn">
                         <h1>Cause Details</h1>
-                        <ol class="breadcrumb">
-                            <li><a href="index-2.html">Home</a><span></span></li>
-                            <li class="active"><a href="#">blog</a></li>
-                        </ol>
+                        <a th:href="@{/donation/} + ${fields.id}" class="donate_btn_detail hvr-sweep-to-bottom">Donate to this cause</a>
+
+                        <!--<ol class="breadcrumb">-->
+                            <!--<li><a href="index-2.html">Home</a><span></span></li>-->
+                            <!--<li class="active"><a href="#">blog</a></li>-->
+                        <!--</ol>-->
                     </div>
                 </div>
                 <!-- column End -->
@@ -301,80 +302,82 @@
 <!-- ==================================================
 *Footer_area start
 =================================================== -->
-    <footer class="romana_footer_area romana_section_padding">
-        <div class="romana_footer_top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-4">
-                        <div class="footer_widget footer_widget_text">
-                            <a href="index-2.html"><img src="../static/images/footer_logo.png" alt="logo"></a>
-                            <p>Duis autem vel eum iriure dolor in hendrerit int dolore eueuat nulla faces at vero eros eneie.</p>
-                            <a href="#"><span><i class="fa fa-map-marker" aria-hidden="true"></i></span>Grant Ave. Central New Road, 8360</a>
-                            <a href="mailto:gardenhouse@gmail.com"> <span><i class="fa fa-envelope-o" aria-hidden="true"></i></span>gardenhouse@gmail.com</a>
-                            <a href="tel:+88075975854"><span><i class="fa fa-phone" aria-hidden="true"></i></span>+88 075 975 854</a>
-                        </div>
+<footer class="romana_footer_area romana_section_padding">
+    <div class="romana_footer_top">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="footer_widget footer_widget_text">
+                        <a href="index-2.html"><img th:src="@{../images/logo-reversed.png}" alt="logo"></a>
+                        <p>Replanting hope, around the world and in your neighborhood.</p>
+                        <a href="#"><span><i class="fa fa-map-marker" aria-hidden="true"></i></span>Grant Ave.
+                            Central New Road, 8360</a>
+                        <a href="mailto:gardenhouse@gmail.com"> <span><i class="fa fa-envelope-o"
+                                                                         aria-hidden="true"></i></span>gardenhouse@gmail.com</a>
+                        <a href="tel:+88075975854"><span><i class="fa fa-phone" aria-hidden="true"></i></span>+88
+                            075 975 854</a>
                     </div>
-                    <!-- column End -->
-                    <div class="col-sm-3">
-                        <div class="footer_widget footer_widget_il">
-                            <h2>Inportant Links</h2>
-                            <ul>
-                                <li><a href="#">Support Forums</a></li>
-                                <li><a href="#">Product Support</a></li>
-                                <li><a href="#">Knowladge Base</a></li>
-                                <li><a href="#">Terms & Condation</a></li>
-                                <li><a href="#">Requist a Quote</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- column End -->
-                    <div class="col-sm-2">
-                        <div class="footer_widget footer_widget_sl">
-                            <h2>Social Links</h2>
-                            <ul>
-                                <li><a href="#">facebook</a></li>
-                                <li><a href="#">Google+</a></li>
-                                <li><a href="#">Dribbble</a></li>
-                                <li><a href="#">Behance</a></li>
-                                <li><a href="#">Themeforest</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- column End -->
-                    <div class="col-sm-3">
-                        <div class="footer_widget footer_widget_gl">
-                            <a href="gallery.html"><h2>our gallery</h2></a>
-                            <a href="gallery.html"><img src="../static/images/home_gallery.png" alt=""></a>
-                        </div>
-                    </div>
-                    <!-- column End -->
                 </div>
+                <!-- column End -->
+                <div class="col-sm-3">
+                    <div class="footer_widget footer_widget_il">
+                        <h2>Inportant Links</h2>
+                        <ul>
+                            <li><a href="#">Support Forums</a></li>
+                            <li><a href="#">Product Support</a></li>
+                            <li><a href="#">Knowladge Base</a></li>
+                            <li><a href="#">Terms & Condation</a></li>
+                            <li><a href="#">Requist a Quote</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- column End -->
+                <div class="col-sm-2">
+                    <div class="footer_widget footer_widget_sl">
+                        <h2>Social Links</h2>
+                        <ul>
+                            <li><a href="#">facebook</a></li>
+                            <li><a href="#">Google+</a></li>
+                            <li><a href="#">Dribbble</a></li>
+                            <li><a href="#">Behance</a></li>
+                            <li><a href="#">Themeforest</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- column End -->
+                <div class="col-sm-3">
+                    <div class="footer_widget footer_widget_gl">
+                        <a href="gallery.html"><h2>our gallery</h2></a>
+                        <a href="gallery.html"><img src="../static/images/home_gallery.png" alt=""></a>
+                    </div>
+                </div>
+                <!-- column End -->
             </div>
         </div>
-        <!-- footer_top End -->
-        <div class="romana_footer_bottom">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="romana_footer_bottom_text">
-                            <p>Copyrigth <span>&copy;</span> 2017, All Right Reserved</p>
-                        </div>
-                    </div>
-                    <!-- column End -->
-                    <div class="col-sm-6">
-                        <div class="romana_footer_bottom_text text-right">
-                            <p>Designed by: <a href="#">Crazycafe</a></p>
-                        </div>
-                    </div>
-                    <!-- column End -->
-                </div>
-                <!-- row End -->
-            </div>
-            <!-- container End -->
-        </div>
-        <!-- footer_bottom End -->
-    </footer>
-<!-- ======================================================
+    </div>
+    <!--&lt;!&ndash; footer_top End &ndash;&gt;-->
+    <!--<div class="romana_footer_bottom">-->
+    <!--<div class="container">-->
+    <!--<div class="row">-->
+    <!--<div class="col-sm-6">-->
+    <!--<div class="romana_footer_bottom_text">-->
+    <!--<p>Copyrigth <span>&copy;</span> 2017, All Right Reserved</p>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--&lt;!&ndash; column End &ndash;&gt;-->
+    <!--<div class="col-sm-6">-->
+    <!--<div class="romana_footer_bottom_text text-right">-->
+    <!--<p>Designed by: <a href="#">Crazycafe</a></p>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--&lt;!&ndash; column End &ndash;&gt;-->
+    <!--</div>-->
+    <!--&lt;!&ndash; row End &ndash;&gt;-->
+    <!--</div>-->
+    <!--&lt;!&ndash; container End &ndash;&gt;-->
+    <!--</div>-->
+    <!--&lt;!&ndash; footer_bottom End &ndash;&gt;-->
+</footer><!-- ======================================================
     ***Js Files***
 =========================================================== -->
 
