donations raised bar is now dynamic

--- a/src/main/Resources/Templates/index.html
+++ b/src/main/Resources/Templates/index.html
@@ -259,7 +259,7 @@
                             <div class="romana_single_cause_text">
                                 <div class="romana_raise_goal clearfix">
                                     <div class="romana_raise_left">
-                                        <p>Raised: <span>$2200</span></p>
+                                        <p>Raised: <span th:text="'$' + ${disasterItems.donationSum}"></span></p>
                                     </div>
                                     <div class="romana_raise_right">
                                         <p>goal: <span>$2500</span></p>
