--- a/src/main/Resources/Templates/index.html
+++ b/src/main/Resources/Templates/index.html
@@ -753,7 +753,7 @@
         <script th:src="@{../js/jquery.meanmenu.js}"></script>
 
         <!-- ================= owl carousel min Js ======== -->
-        <script th:src="@{../js/owl.carousel.min.js}"></script>
+        <!--<script th:src="@{../js/owl.carousel.min.js}"></script>-->
 
         <!-- ================= barfiller  Js ============== -->
         <script th:src="@{../js/jquery.barfiller.js}"></script>
