updated sprout image on donation page

--- a/src/main/Resources/static/css/style.css
+++ b/src/main/Resources/static/css/style.css
@@ -2221,9 +2221,9 @@ body {
     width: 10000px;
     z-index: -1; }
   .romana_donate_bg_area:before {
-    background-image: url("../images/sprout1.jpeg");
+    background-image: url("../images/sprout-donate.png");
     background-repeat: no-repeat;
-    bottom: -73px;
+    bottom: -40px;
     left: 50%;
     margin-left: -550px;
     top: auto;
