further volunteer page edit

--- a/src/main/Resources/Templates/volunteeredit.html
+++ b/src/main/Resources/Templates/volunteeredit.html
@@ -159,6 +159,11 @@
 <div class="romana_contact_form_area romana_volunteerpage_bg_area sp100">
     <div class="container">
         <div class="row">
+
+            <div class="recent_volunteers">
+                <h2>Most Recent Volunteers...</h2>
+            </div>
+
             <div class="col-md-7 col-md-offset-5 col-sm-12">
                 <div class="contact_form common_input">
                     <div class="inner">
