--- a/src/main/Resources/Templates/index.html
+++ b/src/main/Resources/Templates/index.html
@@ -138,7 +138,7 @@
 ============================================================ -->
 <section class="romana_hero_area">
     <div class="hero_slider">
-        <div class="hero_slider_bg" style="background-image:url(/images/leafhands.jpg)">
+        <div class="hero_homepage_bg" style="background-image:url(/images/leafhands.jpg)">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
