--- a/src/main/Resources/static/css/style.css
+++ b/src/main/Resources/static/css/style.css
@@ -750,9 +750,26 @@ body {
   @media only screen and (min-width: 480px) and (max-width: 767px) {
     .hero_slider_bg {
       height: 500px; } }
-
 .hero_slider_bg:after {
   background: rgba(0, 0, 0, 0.54); }
+
+
+.hero_homepage_bg {
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  height: 500px;
+  position: relative; }
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .hero_slider_bg {
+    height: 500px; } }
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+  .hero_slider_bg {
+    height: 500px; } }
+.hero_homepage_bg:after {
+  background: rgba(0, 0, 0, 0.54); }
+
+
 
 .romana_hero_text {
   position: relative;
